@@ -7,6 +7,10 @@
 	MultiplyExtract128): Added prototypes for the non-inline versions
 	under intrincs.
 
+	* winnt.h: A little _X86_ tidy-up for less __NO_INLINE__ ifdefs.
+	(MemoryBarrier, DbgRaiseAssertionFailure): Added prototypes for
+	non-inline versions under intrincs for x86 only.
+
 2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* conio.h (readcr0): Provided proper w32 and w64 versions.
